--- a/MovingPicturesV2/MovingPicturesV2.csproj
+++ b/MovingPicturesV2/MovingPicturesV2.csproj
@@ -20,6 +20,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.11" />
+    <PackageReference Include="Stripe.net" Version="43.8.0" />
   </ItemGroup>
 
   <ItemGroup>
