--- a/MovingPicturesV2.Utility/MovingPicturesV2.Utility.csproj
+++ b/MovingPicturesV2.Utility/MovingPicturesV2.Utility.csproj
@@ -7,7 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MailKit" Version="4.3.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="7.0.14" />
+    <PackageReference Include="MimeKit" Version="4.3.0" />
   </ItemGroup>
 
 </Project>
